# django-mysql-binlog

./: .gitignore  README.rst  runtests.py  setup.cfg
mysql_binlog/: apps.py  exceptions.py  registry.py  signals.py
mysql_binlog/management/commands/: consume_binlog.py
requirements/: test.txt
tests/: settings.py  test_registry.py
tests/management/: test_consume_binlog.py
